add add-opens args
Signed-off-by: at670475 <andrea.tabone@broadcom.com>